Basic update to HttpURLConnection from the Apache HTTP client